--- a/index.html
+++ b/index.html
@@ -210,38 +210,46 @@
         </ul>
       </div>
 
-      <div class="hero-image" aria-hidden="false">
-        <picture>
-          <!-- WebP for supported browsers -->
-          <source type="image/webp"
-            srcset="
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=400&fm=webp&q=60 400w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=800&fm=webp&q=60 800w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=1200&fm=webp&q=60 1200w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=1800&fm=webp&q=60 1800w"
-            sizes="(min-width:900px) 420px, 100vw">
-
-          <!-- Fallback formats -->
-          <source
-            srcset="
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=400&q=60 400w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=800&q=60 800w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=1200&q=60 1200w,
-              https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=1800&q=60 1800w"
-            sizes="(min-width:900px) 420px, 100vw">
-
-          <img
-            src="https://images.unsplash.com/photo-1542223616-1d7d9d2e9f3a?w=800&q=60"
-            alt="Professionals advising a client on international relocation and travel"
-            loading="lazy"
-            decoding="async">
+     HERO IMAGE CAROUSEL -->
+    <div class="hero-image" aria-hidden="false">
+      <div class="hero-carousel">
+        <!-- Slide 1 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1625234872046-87c9a987b0c7?fm=webp&w=800&q=60" sizes="(min-width:900px) 420px, 100vw">
+          <img src="https://images.unsplash.com/photo-1625234872046-87c9a987b0c7?w=800&q=60" alt="Person holding a passport over a map" loading="lazy" decoding="async">
         </picture>
-
-        <a class="img-credit" href="https://unsplash.com" target="_blank" rel="noopener noreferrer">Photo: Unsplash</a>
+        <!-- Slide 2 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1591801231383-b5f4b3f3f5e3?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1591801231383-b5f4b3f3f5e3?w=800&q=60" alt="Black and silver Nikon DSLR camera on red book" loading="lazy" decoding="async">
+        </picture>
+        <!-- Slide 3 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1605902711622-cfb43c443b9d?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c443b9d?w=800&q=60" alt="White and blue identification card" loading="lazy" decoding="async">
+        </picture>
+        <!-- Slide 4 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1609051186442-0QcSnCM0aMc?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1609051186442-0QcSnCM0aMc?w=800&q=60" alt="Person holding passports" loading="lazy" decoding="async">
+        </picture>
+        <!-- Slide 5 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1625298695067-CIuakYIjadc?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1625298695067-CIuakYIjadc?w=800&q=60" alt="Person holding blue and brown map" loading="lazy" decoding="async">
+        </picture>
+        <!-- Slide 6 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1625271764477-jv15x2Gs5F8?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1625271764477-jv15x2Gs5F8?w=800&q=60" alt="Person riding airplane" loading="lazy" decoding="async">
+        </picture>
+        <!-- Slide 7 -->
+        <picture class="carousel-slide">
+          <source type="image/webp" srcset="https://images.unsplash.com/photo-1625283098794-M0AWNxnLaMw?fm=webp&w=800&q=60">
+          <img src="https://images.unsplash.com/photo-1625283098794-M0AWNxnLaMw?w=800&q=60" alt="Airplane on sky during golden hour" loading="lazy" decoding="async">
+        </picture>
       </div>
-    </div>
-  </section>
-
+              
   <main>
     <section aria-labelledby="about-heading">
       <h2 id="about-heading">How we help</h2>
