--- a/index.html
+++ b/index.html
@@ -267,3 +267,63 @@
   </script>
 </body>
 </html>
+<section class="why-choose" aria-labelledby="why-heading">
+  <div class="container">
+    <h2 id="why-heading">Why Clients Trust Global Hire Assist</h2>
+
+    <div class="cards" role="list">
+
+      <!-- Card 1 -->
+      <article class="card" role="listitem" aria-labelledby="card1-title">
+        <div class="card-icon" aria-hidden="true">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+            <path d="M12 2l7 3v5c0 5-3.5 9.5-7 11-3.5-1.5-7-6-7-11V5l7-3z" fill="currentColor" opacity="0.12"/>
+            <path d="M9.5 12.5l1.8 1.8L15 10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <h3 id="card1-title">Transparent & Reliable</h3>
+        <p>Clear steps, honest updates, and no hidden charges — ever.</p>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="card" role="listitem" aria-labelledby="card2-title">
+        <div class="card-icon" aria-hidden="true">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+            <path d="M4 19.5A2.5 2.5 0 0 0 6.5 22H20" stroke="currentColor" stroke-width="1.5"/>
+            <path d="M4 4h14v16H6.5A2.5 2.5 0 0 1 4 17.5V4z" stroke="currentColor" stroke-width="1.5"/>
+            <path d="M8 6h8" stroke="currentColor" stroke-width="1.5"/>
+          </svg>
+        </div>
+        <h3 id="card2-title">Expert Visa Guidance</h3>
+        <p>Step-by-step professional support for all visa categories.</p>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="card" role="listitem" aria-labelledby="card3-title">
+        <div class="card-icon" aria-hidden="true">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+            <rect x="4" y="11" width="16" height="10" rx="2" stroke="currentColor" stroke-width="1.5"/>
+            <path d="M8 11V8a4 4 0 0 1 8 0v3" stroke="currentColor" stroke-width="1.5"/>
+          </svg>
+        </div>
+        <h3 id="card3-title">Secure Application Handling</h3>
+        <p>Your documents are processed with strict data protection standards.</p>
+      </article>
+
+      <!-- Card 4 -->
+      <article class="card" role="listitem" aria-labelledby="card4-title">
+        <div class="card-icon" aria-hidden="true">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+            <path d="M8 3h8v4a4 4 0 0 1-4 4 4 4 0 0 1-4-4V3z" fill="currentColor" opacity="0.12"/>
+            <path d="M8 3h8" stroke="currentColor" stroke-width="1.5"/>
+            <path d="M7 14a5 5 0 0 0 10 0" stroke="currentColor" stroke-width="1.5"/>
+            <path d="M12 21v-4" stroke="currentColor" stroke-width="1.5"/>
+          </svg>
+        </div>
+        <h3 id="card4-title">Proven Success Rate</h3>
+        <p>Thousands of applicants worldwide trust our proven visa process.</p>
+      </article>
+
+    </div>
+  </div>
+</section>
