--- a/index.html
+++ b/index.html
@@ -327,3 +327,43 @@
     </div>
   </div>
 </section>
+<section id="services" class="services-section">
+  <div class="container">
+    <header class="services-header">
+      <h2>Professional Visa & Recruitment Services</h2>
+      <p>Your pathway to trusted global opportunities.</p>
+    </header>
+
+    <div class="services-grid">
+      
+      <!-- Card 1 -->
+      <article class="service-card">
+        <h3>USA Visa Support (B1/B2 / Work Programs)</h3>
+        <p>Complete assistance from DS-160 preparation to embassy interview guidance.</p>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="service-card">
+        <h3>Canada Work & Immigration Programs</h3>
+        <p>Employer matching, LMIA pathways, work permits, and full documentation support.</p>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="service-card">
+        <h3>Global Recruitment Assistance</h3>
+        <p>Connecting qualified applicants to trusted employers worldwide.</p>
+      </article>
+
+      <!-- Card 4 -->
+      <article class="service-card">
+        <h3>Document Preparation & Review</h3>
+        <p>We verify, prepare, and submit your documents correctly and professionally.</p>
+      </article>
+
+    </div>
+
+    <div class="services-button-wrapper">
+      <a href="#" class="btn-primary">View All Services</a>
+    </div>
+  </div>
+</section>
