--- a/index.html
+++ b/index.html
@@ -367,3 +367,45 @@
     </div>
   </div>
 </section>
+<section id="how-it-works" class="how-section">
+  <div class="container">
+    
+    <header class="how-header">
+      <h2>Our Simple Application Process</h2>
+      <p>We guide you step-by-step from consultation to visa approval.</p>
+    </header>
+
+    <div class="how-grid">
+
+      <!-- Step 1 -->
+      <article class="how-card">
+        <div class="step-number">1</div>
+        <h3>Consultation & Eligibility Check</h3>
+        <p>We review your profile, explain your best visa options, and guide you professionally.</p>
+      </article>
+
+      <!-- Step 2 -->
+      <article class="how-card">
+        <div class="step-number">2</div>
+        <h3>Secure Visa Fee Payment</h3>
+        <p>All fees are processed through our trusted agents for smooth and transparent processing.</p>
+      </article>
+
+      <!-- Step 3 -->
+      <article class="how-card">
+        <div class="step-number">3</div>
+        <h3>Document Preparation & Scheduling</h3>
+        <p>We prepare your documents, fill your forms, and book your embassy interview on your behalf.</p>
+      </article>
+
+      <!-- Step 4 -->
+      <article class="how-card">
+        <div class="step-number">4</div>
+        <h3>Embassy Interview & Approval</h3>
+        <p>We train you for the interview and support you until you receive your visa.</p>
+      </article>
+
+    </div>
+
+  </div>
+</section>
