--- a/index.html
+++ b/index.html
@@ -409,3 +409,40 @@
 
   </div>
 </section>
+<section id="testimonials" class="testimonials-section">
+  <div class="container">
+
+    <header class="testimonials-header">
+      <h2>What Our Applicants Say</h2>
+    </header>
+
+    <div class="testimonials-grid">
+
+      <!-- Maria -->
+      <article class="testimonial-card">
+        <p class="testimonial-text">
+          ⭐ “Global Hire Assist made everything simple. My visa was processed fast and professionally.”
+        </p>
+        <p class="testimonial-author">— Maria, Philippines</p>
+      </article>
+
+      <!-- John -->
+      <article class="testimonial-card">
+        <p class="testimonial-text">
+          ⭐ “Excellent communication and trusted guidance. Highly recommended.”
+        </p>
+        <p class="testimonial-author">— John, Kenya</p>
+      </article>
+
+      <!-- Diana -->
+      <article class="testimonial-card">
+        <p class="testimonial-text">
+          ⭐ “I felt very safe with the process. They guided me at every step.”
+        </p>
+        <p class="testimonial-author">— Diana, UAE</p>
+      </article>
+
+    </div>
+
+  </div>
+</section>
