--- a/index.html
+++ b/index.html
@@ -446,3 +446,237 @@
 
   </div>
 </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us — Global Hire Assist</title>
+
+  <style>
+    :root {
+      --bg: #06121f;
+      --text: #ffffff;
+      --accent: #1ba3f7;
+      --container-max: 1240px;
+    }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: var(--container-max);
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    h1, h2 {
+      margin-bottom: 16px;
+      color: var(--accent);
+      font-weight: 700;
+    }
+
+    .section-light {
+      background: rgba(255,255,255,0.04);
+      padding: 40px 20px;
+      border-radius: 12px;
+      margin-bottom: 40px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .value-list li::marker {
+      color: var(--accent);
+    }
+  </style>
+</head>
+<body>
+
+<section class="container">
+  <h1>About Global Hire Assist</h1>
+
+  <article class="section-light">
+    <p>
+      Global Hire Assist is a trusted visa advisory and recruitment support agency helping individuals secure 
+      opportunities abroad through professional and ethical guidance.
+    </p>
+    <p>
+      We focus on transparency, fast processing, and personalized support for every applicant—ensuring a smooth, 
+      stress-free journey from consultation to visa approval.
+    </p>
+    <p>
+      With clients across Africa, Asia, Europe, and the Middle East, we have grown into a reliable partner 
+      for travelers, workers, and professionals seeking global opportunities.
+    </p>
+  </article>
+
+  <h2>Our Core Values</h2>
+  <div class="section-light">
+    <ul class="value-list">
+      <li><strong>Integrity</strong> — We maintain honesty and ethical service at all times.</li>
+      <li><strong>Transparency</strong> — Clear steps, clear pricing, no hidden fees.</li>
+      <li><strong>Professionalism</strong> — Document handling and support with accuracy.</li>
+      <li><strong>Results</strong> — We work towards successful outcomes for every applicant.</li>
+    </ul>
+  </div>
+
+  <h2>Why Choose Us</h2>
+  <div class="section-light">
+    <ul>
+      <li>Experienced visa advisors</li>
+      <li>Trusted employer connections</li>
+      <li>Fast, organized processing</li>
+      <li>Confidential handling of all documents</li>
+      <li>Reliable support until visa approval</li>
+      <li>Global applicants welcomed</li>
+    </ul>
+  </div>
+</section>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Services — Global Hire Assist</title>
+
+  <style>
+    :root {
+      --bg: #06121f;
+      --text: #ffffff;
+      --accent: #1ba3f7;
+      --container-max: 1240px;
+      --card-bg: rgba(255,255,255,0.06);
+    }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: var(--container-max);
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    h1, h2, h3 {
+      color: var(--accent);
+      font-weight: 700;
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 24px;
+      margin-top: 30px;
+    }
+
+    @media (max-width: 768px) {
+      .services-grid { grid-template-columns: 1fr; }
+    }
+
+    .service-card {
+      background: var(--card-bg);
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+      transition: transform .2s ease;
+    }
+
+    .service-card:hover {
+      transform: translateY(-6px);
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li::marker {
+      color: var(--accent);
+    }
+  </style>
+</head>
+<body>
+
+<section class="container">
+  <h1>Our Professional Services</h1>
+
+  <p>
+    At Global Hire Assist, we provide reliable and structured visa and recruitment services tailored 
+    to support your international goals. Our team guides you through each step, ensuring a smooth and 
+    successful process.
+  </p>
+
+  <div class="services-grid">
+
+    <!-- Service 1 -->
+    <article class="service-card">
+      <h2>1. USA Visa Assistance (B1/B2 & Work Programs)</h2>
+      <p>We assist with the full USA visa process including:</p>
+      <ul>
+        <li>DS-160 form preparation</li>
+        <li>Embassy appointment scheduling</li>
+        <li>Interview coaching</li>
+        <li>Document verification</li>
+        <li>Travel preparation guidance</li>
+      </ul>
+    </article>
+
+    <!-- Service 2 -->
+    <article class="service-card">
+      <h2>2. Canada Work & Immigration Support</h2>
+      <p>We provide assistance for Canada work and immigration programs:</p>
+      <ul>
+        <li>LMIA employer connections</li>
+        <li>Work permit application support</li>
+        <li>Document review & preparation</li>
+        <li>Job match assistance</li>
+        <li>Immigration pathway guidance</li>
+      </ul>
+    </article>
+
+    <!-- Service 3 -->
+    <article class="service-card">
+      <h2>3. Recruitment & Employer Placement</h2>
+      <p>We connect applicants with trusted international employers offering:</p>
+      <ul>
+        <li>Hospitality jobs</li>
+        <li>Caregiver roles</li>
+        <li>Skilled & semi-skilled positions</li>
+        <li>Verified global employer networks</li>
+      </ul>
+    </article>
+
+    <!-- Service 4 -->
+    <article class="service-card">
+      <h2>4. Document Preparation Services</h2>
+      <p>We help prepare all key documents for your visa application:</p>
+      <ul>
+        <li>Passport support</li>
+        <li>Invitation letters</li>
+        <li>Resume/CV writing</li>
+        <li>Proof of funds guidance</li>
+        <li>Visa application review</li>
+        <li>Form preparation & editing</li>
+      </ul>
+    </article>
+
+  </div>
+
+</section>
+
+</body>
+</html>
