--- a/index.html
+++ b/index.html
@@ -680,3 +680,263 @@
 
 </body>
 </html>
+ 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>How It Works – Global Hire Assist</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #f7f9fc;
+        color: #222;
+    }
+
+    header {
+        background: #0b132b;
+        padding: 20px;
+        text-align: center;
+        color: #fff;
+        font-size: 28px;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
+
+    .container {
+        max-width: 1000px;
+        margin: 40px auto;
+        padding: 20px;
+    }
+
+    .intro {
+        text-align: center;
+        margin-bottom: 40px;
+        font-size: 20px;
+        color: #444;
+    }
+
+    .steps {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 25px;
+    }
+
+    .step {
+        background: white;
+        padding: 25px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        transition: 0.3s;
+    }
+
+    .step:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 18px rgba(0,0,0,0.15);
+    }
+
+    .step-number {
+        font-size: 22px;
+        font-weight: bold;
+        color: #1c2541;
+        margin-bottom: 10px;
+    }
+
+    .step-text {
+        color: #555;
+        line-height: 1.5;
+    }
+</style>
+</head>
+
+<body>
+
+<header>How It Works</header>
+
+<div class="container">
+
+    <p class="intro">Your Visa Journey, Simplified — from application to travel support.</p>
+
+    <div class="steps">
+
+        <div class="step">
+            <div class="step-number">1. Submit Application</div>
+            <div class="step-text">Start by filling out our secure application form.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">2. Initial Consultation</div>
+            <div class="step-text">A consultant reviews your case and guides you through requirements.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">3. Submit Documents</div>
+            <div class="step-text">We help you prepare embassy-standard documentation.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">4. Pay Visa Fee</div>
+            <div class="step-text">Secure and fast processing through a trusted payment agent.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">5. Embassy Appointment</div>
+            <div class="step-text">We book your official embassy appointment after verification.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">6. Interview Training</div>
+            <div class="step-text">Professional coaching to make you confident and prepared.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">7. Visa Processing</div>
+            <div class="step-text">We track updates and notify you immediately.</div>
+        </div>
+
+        <div class="step">
+            <div class="step-number">8. Travel Preparation</div>
+            <div class="step-text">Final guidance for travel, packing, and arrival instructions.</div>
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact & Apply – Global Hire Assist</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #f6f8fb;
+        color: #222;
+    }
+
+    header {
+        background: #1a1a2e;
+        color: white;
+        text-align: center;
+        padding: 25px;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .container {
+        max-width: 850px;
+        margin: 40px auto;
+        padding: 20px;
+    }
+
+    form {
+        background: white;
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    input, select, textarea {
+        width: 100%;
+        padding: 14px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        border: 1px solid #bbb;
+        border-radius: 8px;
+        font-size: 16px;
+    }
+
+    textarea {
+        height: 140px;
+        resize: none;
+    }
+
+    button {
+        width: 100%;
+        padding: 16px;
+        font-size: 18px;
+        background: #162447;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    button:hover {
+        background: #1f4068;
+    }
+
+    .contact-info {
+        margin-top: 40px;
+        background: white;
+        padding: 25px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    .contact-info p {
+        font-size: 18px;
+        margin: 10px 0;
+        color: #333;
+    }
+</style>
+</head>
+
+<body>
+
+<header>Apply or Contact Us</header>
+
+<div class="container">
+
+    <form>
+        <h2>Submit Your Application</h2>
+
+        <input type="text" placeholder="Full Name" required>
+        <input type="email" placeholder="Email Address" required>
+        <input type="text" placeholder="Phone Number" required>
+
+        <select required>
+            <option disabled selected>Select Your Country</option>
+            <option>Kenya</option>
+            <option>Uganda</option>
+            <option>Nigeria</option>
+            <option>Philippines</option>
+            <option>India</option>
+            <option>Other</option>
+        </select>
+
+        <select required>
+            <option disabled selected>Select Visa Type</option>
+            <option>USA Visa</option>
+            <option>Europe Visa</option>
+            <option>Work Visa</option>
+            <option>Study Visa</option>
+            <option>Visitor Visa</option>
+        </select>
+
+        <textarea placeholder="Write your message..."></textarea>
+
+        <button>Submit Application</button>
+    </form>
+
+    <div class="contact-info">
+        <h2>Contact Information</h2>
+        <p>📍 <strong>Global Hire Assist — International Support Team</strong></p>
+        <p>📧 support@globalhireassist.com</p>
+        <p>📱 WhatsApp: +1 447 276 3403</p>
+    </div>
+
+</div>
+
+</body>
+</html>
