--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
     <div class="contact-info">
         <h2>Contact Information</h2>
         <p>📍 <strong>Global Hire Assist — International Support Team</strong></p>
-        <p>📧 support@globalhireassist.com</p>
+        <p>📧 support globalhireassist@gmail.com</p>
         <p>📱 WhatsApp: +1 447 276 3403</p>
     </div>
 
